; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_nutdec.c_get_packetheader.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_nutdec.c_get_packetheader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i64)* @get_packetheader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_packetheader(i32* %0, i32* %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %11 = load i64, i64* %9, align 8
  %12 = call i64 @av_be2ne64(i64 %11)
  store i64 %12, i64* %9, align 8
  %13 = bitcast i64* %9 to i32*
  %14 = call i64 @ff_crc04C11DB7_update(i32 0, i32* %13, i32 8)
  store i64 %14, i64* %9, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i64, i64* %9, align 8
  %17 = call i32 @ffio_init_checksum(i32* %15, i64 (i32, i32*, i32)* @ff_crc04C11DB7_update, i64 %16)
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @ffio_read_varlen(i32* %18)
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %10, align 4
  %21 = icmp sgt i32 %20, 4096
  br i1 %21, label %22, label %25

22:                                               ; preds = %4
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @avio_rb32(i32* %23)
  br label %25

25:                                               ; preds = %22, %4
  %26 = load i32*, i32** %7, align 8
  %27 = call i64 @ffio_get_checksum(i32* %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %25
  %30 = load i32, i32* %10, align 4
  %31 = icmp sgt i32 %30, 4096
  br i1 %31, label %32, label %33

32:                                               ; preds = %29
  store i32 -1, i32* %5, align 4
  br label %41

33:                                               ; preds = %29, %25
  %34 = load i32*, i32** %7, align 8
  %35 = load i32, i32* %8, align 4
  %36 = icmp ne i32 %35, 0
  %37 = zext i1 %36 to i64
  %38 = select i1 %36, i64 (i32, i32*, i32)* @ff_crc04C11DB7_update, i64 (i32, i32*, i32)* null
  %39 = call i32 @ffio_init_checksum(i32* %34, i64 (i32, i32*, i32)* %38, i64 0)
  %40 = load i32, i32* %10, align 4
  store i32 %40, i32* %5, align 4
  br label %41

41:                                               ; preds = %33, %32
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}

declare dso_local i64 @av_be2ne64(i64) #1

declare dso_local i64 @ff_crc04C11DB7_update(i32, i32*, i32) #1

declare dso_local i32 @ffio_init_checksum(i32*, i64 (i32, i32*, i32)*, i64) #1

declare dso_local i32 @ffio_read_varlen(i32*) #1

declare dso_local i32 @avio_rb32(i32*) #1

declare dso_local i64 @ffio_get_checksum(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
